k8s/route-openshift.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: transaction-service
spec:
  to:
    kind: Service
    name: transaction-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
